# OilCRM

./: README.md
.github/workflows/: backend.yml
backend/: README.md  pyproject.toml  setup.cfg
backend/app/: __init__.py
